test/errors/literals/binary_literal_invalid_fail.hy
// Expect failure: binary literal contains invalid digit
int main() {
    int value = 0b102
    return value
}
